--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,12 @@
     <dependency>
       <groupId>net.bytebuddy</groupId>
       <artifactId>byte-buddy</artifactId>
-      <version>1.7.6</version>
+      <version>1.10.2</version>
     </dependency>
     <dependency>
       <groupId>net.bytebuddy</groupId>
       <artifactId>byte-buddy-agent</artifactId>
-      <version>1.7.6</version>
+      <version>1.10.2</version>
     </dependency>
     <dependency>
       <groupId>org.testng</groupId>
@@ -31,10 +31,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
+        <version>3.8.0</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <release>11</release>
         </configuration>
       </plugin>
     </plugins>
